new blog fix words

--- a/_posts/2017-12-15-2017读过的书.md
+++ b/_posts/2017-12-15-2017读过的书.md
@@ -23,6 +23,6 @@ categories:
 
 >> 看作者里面有TJ，对于了解过Node的人都知道，TJ给Node社区贡献超级多的高质量模块，Node的社区的偶像级人物。
 这本实战写的时间比较早了，如果要照着里面的例子往下走，要注意一下书中node的版本和引入的模块的版本，
-我针对几个例子也做了一些时间，放在[NodeInAction](https://github.com/Myu1533/NodeInAction.git)里面，欢迎查看和指正。
-跟着这本书走完，后续能持续巩固的化，开发个人Node的项目已经不是什么问题了，推荐指数无数星。
+我针对几个例子也做了一些实践，放在[NodeInAction](https://github.com/Myu1533/NodeInAction.git)里面，欢迎查看和指正。
+跟着这本书走完，后续能持续巩固的话，开发个人Node的项目已经不是什么问题了，推荐指数无数星。
 
