--- a/_posts/2017-12-15-2017读过的书.md
+++ b/_posts/2017-12-15-2017读过的书.md
@@ -26,3 +26,17 @@ categories:
 我针对几个例子也做了一些实践，放在[NodeInAction](https://github.com/Myu1533/NodeInAction.git)里面，欢迎查看和指正。
 跟着这本书走完，后续能持续巩固的话，开发个人Node的项目已经不是什么问题了，推荐指数无数星。
 
+2017-10
+* 《智能时代》 作者：吴军
+
+>> 打通眼界的一本书，智能到底是什么，现在的智能做到了什么，在做什么，能做什么，都做了说明，易于理解。各行业的人都能在书里找到自己行业的因为智能将会怎么变化，行业革命的驱动怎么来，为了不被淘汰，可以做准备了。
+
+2017-08
+* 《图解HTTP》作者：上野宣
+
+>> HTTP的入门书，通俗易懂，我借这本书解决了几个http问题，打基础的好书
+
+2017-05
+* 《JavaScript设计模式与开发实践》 作者：曾探
+
+>> 推荐必读。看起来可能不会很好理解，结合自己开发的过程，codereview以后会发现其实用过，书里给了命名，再去看其他源码的话，从好的源码中遍地都是各种模式，阅读源码的理解效率也会高很多，对技术有追求的人，值得反复阅读
