add paginate set

--- a/_posts/2018-04-29-meta.md
+++ b/_posts/2018-04-29-meta.md
@@ -190,3 +190,9 @@ categories: html
 
 <title>标题</title>
 ```
+
+## 参考
+
+- [网红一丝](https://github.com/yisibl/blog/issues/1)
+- [百度FEX](http://fex.baidu.com/blog/2014/10/html-head-tags/)
+- [MDN-meta](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta)
